Fix info icon position on mobile

--- a/less/style/blocks/form.less
+++ b/less/style/blocks/form.less
@@ -18,10 +18,6 @@
 .form__group--condensed {
   margin-bottom: 14px;
 
-  .respond(medium, {
-
-  });
-
   .form__group__label {
     color: @color-gray--darker;
     margin-bottom: 0;
@@ -64,10 +60,10 @@
 
   .form__group__label__info-icon-text-wrapper {
     display: block;
-    line-height: 40px;
     margin-right: @info-icon-diameter + 10px;
 
     .respond(medium; {
+      line-height: 40px;
       margin-right: @info-icon-diameter--medium + 20px;
     });
   }
